Add Josephus problem algorithm

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ test {
     useJUnitPlatform()
 
     testlogger {
-        theme 'standard-parallel'
+        theme 'standard'
         showExceptions true
         showStackTraces true
         showCauses true
