--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id "com.adarshr.test-logger" version "3.1.0"
 }
 
+apply from: rootProject.file('gradle/install-git-hooks.gradle')
+
 repositories {
     mavenCentral()
 }
